; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_defaulthandler.c_create_storage.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_defaulthandler.c_create_storage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@STGM_CREATE = common dso_local global i32 0, align 4
@STGM_SHARE_EXCLUSIVE = common dso_local global i32 0, align 4
@STGM_READWRITE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**)* @create_storage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_storage(i32** %0) #0 {
  %2 = alloca i32**, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32** %0, i32*** %2, align 8
  %5 = load i32, i32* @TRUE, align 4
  %6 = call i32 @CreateILockBytesOnHGlobal(i32* null, i32 %5, i32** %4)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i64 @SUCCEEDED(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %21

10:                                               ; preds = %1
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* @STGM_CREATE, align 4
  %13 = load i32, i32* @STGM_SHARE_EXCLUSIVE, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @STGM_READWRITE, align 4
  %16 = or i32 %14, %15
  %17 = load i32**, i32*** %2, align 8
  %18 = call i32 @StgCreateDocfileOnILockBytes(i32* %11, i32 %16, i32 0, i32** %17)
  store i32 %18, i32* %3, align 4
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @ILockBytes_Release(i32* %19)
  br label %21

21:                                               ; preds = %10, %1
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @CreateILockBytesOnHGlobal(i32*, i32, i32**) #1

declare dso_local i64 @SUCCEEDED(i32) #1

declare dso_local i32 @StgCreateDocfileOnILockBytes(i32*, i32, i32, i32**) #1

declare dso_local i32 @ILockBytes_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
